--- a/ansible/user-util-setup.yml
+++ b/ansible/user-util-setup.yml
@@ -1,5 +1,5 @@
 ---
-# includes tasks executed as logged in user
+# tasks executed as logged in user
 - hosts: localhost
   gather_facts: yes
 
@@ -9,3 +9,14 @@
         repo: https://github.com/Bash-it/bash-it.git
         dest: ~/.bash_it
         depth: 1
+
+    - name: pull fzf repository
+      git:
+        repo: https://github.com/junegunn/fzf.git
+        dest: ~/.fzf
+        depth: 1
+      register: fzf_status
+
+    - name: install fzf
+      command: "~/.fzf/install --all"
+      when: fzf_status.changed
