--- a/ansible/cli_setup.yml
+++ b/ansible/cli_setup.yml
@@ -1,24 +1,29 @@
 ---
 - name: Install git
-  apt: name=git state=installed
+  apt: name=git state=present
 
 - name: Install tree
-  apt: name=tree state=installed
+  apt: name=tree state=present
 
 - name: Install ag
-  apt: name=silversearcher-ag state=installed
+  apt: name=silversearcher-ag state=present
+
+- name: Install ripgrep from .deb package
+  apt:
+    deb: https://github.com/BurntSushi/ripgrep/releases/download/0.10.0/ripgrep_0.10.0_amd64.deb
+
+- name: Install fd from .deb package
+  apt:
+    deb: https://github.com/sharkdp/fd/releases/download/v7.2.0/fd_7.2.0_amd64.deb
 
 - name: Install jq
-  apt: name=jq state=installed
-
-- name: Install vim
-  apt: name=vim state=installed
+  apt: name=jq state=present
 
 - name: Install unzip
-  apt: name=unzip state=installed
+  apt: name=unzip state=present
 
 - name: Install autojump
-  apt: name=autojump state=installed
+  apt: name=autojump state=present
   register: autojump_status
 
 - name: copy autojump profile
