--- a/ansible/cli_setup.yml
+++ b/ansible/cli_setup.yml
@@ -19,8 +19,18 @@
   apt:
     deb: https://github.com/sharkdp/fd/releases/download/v7.2.0/fd_7.2.0_amd64.deb
 
+- apt_repository:
+    repo: ppa:neovim-ppa/stable
+    update_cache: yes
+
+- name: Install neovim
+  apt: name=neovim state=present
+
 - name: Install jq
   apt: name=jq state=present
+
+- name: Install unzip
+  apt: name=unzip state=present
 
 - name: Install unzip
   apt: name=unzip state=present
