--- a/ansible/cli_setup.yml
+++ b/ansible/cli_setup.yml
@@ -16,15 +16,15 @@
 
 - name: Install ripgrep from .deb package
   apt:
-    deb: https://github.com/BurntSushi/ripgrep/releases/download/11.0.1/ripgrep_11.0.1_amd64.deb
+    deb: https://github.com/BurntSushi/ripgrep/releases/download/11.0.2/ripgrep_11.0.2_amd64.deb
 
 - name: Install fd from .deb package
   apt:
-    deb: https://github.com/sharkdp/fd/releases/download/v7.3.0/fd_7.3.0_amd64.deb
+    deb: https://github.com/sharkdp/fd/releases/download/v7.4.0/fd_7.4.0_amd64.deb
 
 - name: Install bat from .deb package
   apt:
-    deb: https://github.com/sharkdp/bat/releases/download/v0.11.0/bat_0.11.0_amd64.deb
+    deb: https://github.com/sharkdp/bat/releases/download/v0.12.1/bat_0.12.1_amd64.deb
 
 - name: Install jq
   apt: name=jq state=present
@@ -67,10 +67,10 @@
 # install xsv - utilities for csv from 
 # https://github.com/BurntSushi/xsv/releases/latest
 
-# bat - https://github.com/sharkdp/bat/releases/download/v0.11.0/bat_0.11.0_amd64.deb
-# vifm
 # ctags
-# xsv
+# exa - https://github.com/ogham/exa
+# xsv - https://github.com/BurntSushi/xsv 
+# fselect - https://github.com/jhspetersson/fselect
 
 - name: Install autojump
   apt: name=autojump state=present
