--- a/ansible/py3-setup.yml
+++ b/ansible/py3-setup.yml
@@ -25,3 +25,6 @@
 
 - name: install dotbot to manage dot files
   pip: name=dotbot state=present
+
+- name: install tmuxp
+  pip: name=tmuxp state=present
