--- a/.envrc
+++ b/.envrc
@@ -7,11 +7,8 @@ export VIRTUAL_ENV_DISABLE_PROMPT=1
 export GIT_AUTHOR_EMAIL=gavinln@hotmail.com
 export GIT_COMMITTER_EMAIL=gavinln@hotmail.com
 
-# export BAT_THEME="Solarized (light)"
-export BAT_THEME="Solarized (dark)"
-
-# Ludwig environment
-export NUMEXPR_MAX_THREADS=6
+export BAT_THEME="Solarized (light)"
+# export BAT_THEME="Solarized (dark)"
 
 layout_poetry() {
   if [[ ! -f pyproject.toml ]]; then
