--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,7 @@
 export PYTHONBREAKPOINT=IPython.embed
 
+export EDITOR=nvim
+
 export VIRTUAL_ENV_DISABLE_PROMPT=1
 
 # export POETRY_VIRTUALENVS_PATH=$(pwd)/.venv  # to creative venv in project directory
