add pager to direnv file

--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,8 @@ export PYTHONBREAKPOINT=IPython.embed
 
 export EDITOR=nvim
 
+export PAGER='bat -p'
+
 export VIRTUAL_ENV_DISABLE_PROMPT=1
 
 # export POETRY_VIRTUALENVS_PATH=$(pwd)/.venv  # to creative venv in project directory
